packages/svelte/tests/compiler-errors/samples/svelte-internal-import/main.svelte.js
import { something } from 'svelte/internal/server';
